Cleaning files out of git...i guess

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+venv/
+env/
+# PyCharm specific files
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Python temporary and compilation files
+__pycache__/
+*.pyc
+*.pyd
+*.pyo
+*.egg
+*.egg-info/
+build/
+dist/
 parsed_rates/
 raw_movie_files/
 user_models/
