--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,101 @@
-﻿anyio==4.9.0
-attrs==25.3.0
+﻿attrs==25.3.0
 beautifulsoup4==4.13.4
-catboost==1.2.8
-category_encoders==2.8.1
-certifi==2025.6.15
 cffi==1.17.1
-charset-normalizer==3.4.2
-contourpy==1.3.2
-cycler==0.12.1
-fonttools==4.58.4
-graphviz==0.21
-h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-idna==3.10
-joblib==1.5.1
-kiwisolver==1.4.8
-lightgbm==4.6.0
-matplotlib==3.10.3
 narwhals==1.43.1
 numpy==2.3.1
 outcome==1.3.0.post0
+pycparser==2.22
+PySocks==1.7.1
+python-dotenv==1.1.0
+python-telegram-bot==22.1
+seaborn==0.13.2
+selenium==4.33.0
+sortedcontainers==2.4.0
+soupsieve==2.7
+trio-websocket==0.12.2
+websocket-client==1.8.0
+wsproto==1.2.0
+xgboost==3.0.2
+python-telegram-bot[webhooks]
+alembic==1.16.2
+annotated-types==0.7.0
+anyio==4.9.0
+blinker==1.9.0
+cachetools==5.5.2
+catboost==1.2.8
+category_encoders==2.8.1
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpickle==3.1.1
+colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
+databricks-sdk==0.57.0
+docker==7.1.0
+fastapi==0.115.13
+Flask==3.1.1
+fonttools==4.58.4
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.40.3
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+graphviz==0.21
+greenlet==3.2.3
+h11==0.16.0
+idna==3.10
+importlib_metadata==8.7.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
+lightgbm==4.6.0
+Mako==1.3.10
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mlflow==3.1.1
+mlflow-skinny==3.1.1
+opentelemetry-api==1.34.1
+opentelemetry-sdk==1.34.1
+opentelemetry-semantic-conventions==0.55b1
 packaging==25.0
 pandas==2.3.0
 patsy==1.0.1
 pillow==11.2.1
 plotly==6.1.2
-pycparser==2.22
+protobuf==6.31.1
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic_core==2.33.2
 pyparsing==3.2.3
-PySocks==1.7.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-telegram-bot==22.1
 pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
 requests==2.32.4
+rsa==4.9.1
 scikit-learn==1.7.0
-scipy==1.15.3
-seaborn==0.13.2
-selenium==4.33.0
+scipy==1.10.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-statsmodels==0.14.4
+SQLAlchemy==2.0.41
+sqlparse==0.5.3
+starlette==0.46.2
+statsmodels==0.14.0
 threadpoolctl==3.6.0
-trio==0.30.0
-trio-websocket==0.12.2
-typing_extensions==4.13.2
+typing-inspection==0.4.1
+typing_extensions==4.14.0
 tzdata==2025.2
-urllib3==2.4.0
-websocket-client==1.8.0
-wsproto==1.2.0
+urllib3==2.5.0
+uvicorn==0.34.3
+waitress==3.0.2
+Werkzeug==3.1.3
 xgboost==3.0.2
-python-telegram-bot[webhooks]
+zipp==3.23.0
