--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-.env
-parsed_rates/
-raw_movie_files/
-user_models/
-users_database/
 venv/
 env/
 # PyCharm specific files
@@ -20,3 +15,14 @@ __pycache__/
 *.egg-info/
 build/
 dist/
+parsed_rates/
+raw_movie_files/
+user_models/
+users_database/
+mlartifacts/
+mlflow_env/
+mlruns/
+.env
+again.py
+delete_png.py
+train_model.py
